@@ -1,23 +1,38 @@
 package com.bookmyhotel.controller;
 
+import com.bookmyhotel.dto.TaskUpdateRequest;
+import com.bookmyhotel.dto.HousekeepingTaskDTO;
 import com.bookmyhotel.entity.HousekeepingTask;
 import com.bookmyhotel.entity.HousekeepingTaskStatus;
 import com.bookmyhotel.entity.HousekeepingStaff;
 import com.bookmyhotel.entity.HousekeepingTaskType;
 import com.bookmyhotel.entity.TaskPriority;
+import com.bookmyhotel.entity.User;
+import com.bookmyhotel.entity.UserRole;
 import com.bookmyhotel.enums.WorkShift;
+import com.bookmyhotel.repository.UserRepository;
 import com.bookmyhotel.service.HousekeepingService;
 import com.bookmyhotel.service.HotelService;
 import com.bookmyhotel.tenant.TenantContext;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/housekeeping")
+@PreAuthorize("hasRole('HOTEL_ADMIN') or hasRole('FRONTDESK') or hasRole('HOUSEKEEPING') or hasRole('OPERATIONAL_ADMIN')")
 public class HousekeepingController {
+
+    private static final Logger logger = LoggerFactory.getLogger(HousekeepingController.class);
 
     @Autowired
     private HousekeepingService housekeepingService;
@@ -25,31 +40,61 @@ public class HousekeepingController {
     @Autowired
     private HotelService hotelService;
 
+    @Autowired
+    private UserRepository userRepository;
+
     // Task endpoints
     @PostMapping("/tasks")
     public ResponseEntity<HousekeepingTask> createTask(@RequestBody HousekeepingTaskRequest request) {
+        // System.out.println("🔍 Creating task with request: " + request);
+        // System.out.println("🔍 Title: " + request.getTitle());
+        // System.out.println("🔍 Description: " + request.getDescription());
+        // System.out.println("🔍 Task Type: " + request.getTaskType());
+        // System.out.println("🔍 Priority: " + request.getPriority());
+        // System.out.println("🔍 Room Number: " + request.getRoomNumber());
+        // System.out.println("🔍 Estimated Duration: " +
+        // request.getEstimatedDuration());
+        // System.out.println("🔍 Assigned Staff ID: " + request.getAssignedStaffId());
+        // System.out.println("🔍 Notes: " + request.getNotes());
+
         String tenantId = TenantContext.getTenantId();
         Long hotelId = hotelService.getHotelIdByTenantId(tenantId);
-        HousekeepingTask task = housekeepingService.createTask(
-                hotelId,
-                request.getRoomId(),
-                request.getTaskType(),
-                request.getPriority(),
-                request.getDescription(),
-                request.getSpecialInstructions());
-        return ResponseEntity.ok(task);
+        // System.out.println("🔍 Tenant ID: " + tenantId);
+        // System.out.println("🔍 Hotel ID: " + hotelId);
+
+        try {
+            HousekeepingTask task = housekeepingService.createTaskEnhanced(
+                    hotelId,
+                    request.getRoomNumber(),
+                    request.getTitle(),
+                    request.getTaskType(),
+                    request.getPriority(),
+                    request.getDescription(),
+                    request.getNotes(),
+                    request.getEstimatedDuration(),
+                    request.getAssignedStaffId());
+            // System.out.println("✅ Task created successfully: " + task.getId());
+            return ResponseEntity.ok(task);
+        } catch (Exception e) {
+            logger.error("Error creating housekeeping task", e);
+            throw e;
+        }
     }
 
     @GetMapping("/tasks")
-    public ResponseEntity<List<HousekeepingTask>> getAllTasks() {
+    public ResponseEntity<Page<HousekeepingTaskDTO>> getAllTasks(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
         String tenantId = TenantContext.getTenantId();
         Long hotelId = hotelService.getHotelIdByTenantId(tenantId);
-        List<HousekeepingTask> tasks = housekeepingService.getAllTasks(hotelId);
-        return ResponseEntity.ok(tasks);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<HousekeepingTask> tasks = housekeepingService.getAllTasks(hotelId, pageable);
+        Page<HousekeepingTaskDTO> taskDTOs = tasks.map(this::convertToDTO);
+        return ResponseEntity.ok(taskDTOs);
     }
 
     @GetMapping("/tasks/{id}")
-    public ResponseEntity<HousekeepingTask> getTaskById(@PathVariable Long id) {
+    public ResponseEntity<HousekeepingTaskDTO> getTaskById(@PathVariable Long id) {
         String tenantId = TenantContext.getTenantId();
         Long hotelId = hotelService.getHotelIdByTenantId(tenantId);
         List<HousekeepingTask> tasks = housekeepingService.getAllTasks(hotelId);
@@ -57,19 +102,19 @@ public class HousekeepingController {
                 .filter(t -> t.getId().equals(id))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("Task not found"));
-        return ResponseEntity.ok(task);
+        return ResponseEntity.ok(convertToDTO(task));
     }
 
     @GetMapping("/tasks/hotel/{hotelId}")
-    public ResponseEntity<List<HousekeepingTask>> getTasksByHotel(@PathVariable Long hotelId) {
+    @PreAuthorize("@hotelSecurity.canAccessHotel(#hotelId)")
+    public ResponseEntity<List<HousekeepingTaskDTO>> getTasksByHotel(@PathVariable Long hotelId) {
         String tenantId = TenantContext.getTenantId();
-        // Filter by hotel through room relationship
-        List<HousekeepingTask> allTasks = housekeepingService.getAllTasks(hotelId);
-        List<HousekeepingTask> hotelTasks = allTasks.stream()
-                .filter(task -> task.getRoom() != null && task.getRoom().getHotel() != null &&
-                        task.getRoom().getHotel().getId().equals(hotelId))
-                .toList();
-        return ResponseEntity.ok(hotelTasks);
+        // Get tasks directly by hotel ID (tasks now store hotel ID directly)
+        List<HousekeepingTask> hotelTasks = housekeepingService.getAllTasks(hotelId);
+        List<HousekeepingTaskDTO> taskDTOs = hotelTasks.stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(taskDTOs);
     }
 
     @GetMapping("/tasks/status/{status}")
@@ -132,6 +177,19 @@ public class HousekeepingController {
         return ResponseEntity.ok(updatedTask);
     }
 
+    @PutMapping("/tasks/{id}/status")
+    public ResponseEntity<?> updateTaskStatus(@PathVariable Long id, @RequestBody TaskUpdateRequest request) {
+        try {
+            String tenantId = TenantContext.getTenantId();
+            Long hotelId = hotelService.getHotelIdByTenantId(tenantId);
+            HousekeepingTask updatedTask = housekeepingService.updateTaskStatus(hotelId, id, request.getStatus(),
+                    request.getNotes());
+            return ResponseEntity.ok(updatedTask);
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body("Error updating task status: " + e.getMessage());
+        }
+    }
+
     @PostMapping("/tasks/{id}/cancel")
     public ResponseEntity<HousekeepingTask> cancelTask(@PathVariable Long id, @RequestBody CancelTaskRequest request) {
         String tenantId = TenantContext.getTenantId();
@@ -160,9 +218,12 @@ public class HousekeepingController {
     public ResponseEntity<List<HousekeepingStaffDTO>> getAllStaff() {
         String tenantId = TenantContext.getTenantId();
         Long hotelId = hotelService.getHotelIdByTenantId(tenantId);
-        List<HousekeepingStaff> staff = housekeepingService.getAllStaff(hotelId);
-        List<HousekeepingStaffDTO> staffDTOs = staff.stream()
-                .map(this::convertToStaffDTO)
+
+        // Get users with HOUSEKEEPING role from the hotel
+        List<User> housekeepingUsers = userRepository.findByHotelIdAndRole(hotelId, UserRole.HOUSEKEEPING);
+
+        List<HousekeepingStaffDTO> staffDTOs = housekeepingUsers.stream()
+                .map(this::convertUserToStaffDTO)
                 .toList();
         return ResponseEntity.ok(staffDTOs);
     }
@@ -234,19 +295,32 @@ public class HousekeepingController {
 
     // DTO Classes
     public static class HousekeepingTaskRequest {
-        private Long roomId;
+        private String title; // Will use as part of description
+        private String description;
         private HousekeepingTaskType taskType;
         private TaskPriority priority;
-        private String description;
-        private String specialInstructions;
+        private String roomNumber; // Will look up room by number
+        private Integer floorNumber;
+        private Integer estimatedDuration; // Duration in minutes
+        private String dueDate; // ISO date string
+        private Long assignedStaffId;
+        private String notes; // Will use as specialInstructions
 
         // Getters and setters
-        public Long getRoomId() {
-            return roomId;
+        public String getTitle() {
+            return title;
         }
 
-        public void setRoomId(Long roomId) {
-            this.roomId = roomId;
+        public void setTitle(String title) {
+            this.title = title;
+        }
+
+        public String getDescription() {
+            return description;
+        }
+
+        public void setDescription(String description) {
+            this.description = description;
         }
 
         public HousekeepingTaskType getTaskType() {
@@ -265,20 +339,61 @@ public class HousekeepingController {
             this.priority = priority;
         }
 
-        public String getDescription() {
-            return description;
+        public String getRoomNumber() {
+            return roomNumber;
         }
 
-        public void setDescription(String description) {
-            this.description = description;
+        public void setRoomNumber(String roomNumber) {
+            this.roomNumber = roomNumber;
+        }
+
+        public Integer getFloorNumber() {
+            return floorNumber;
+        }
+
+        public void setFloorNumber(Integer floorNumber) {
+            this.floorNumber = floorNumber;
+        }
+
+        public Integer getEstimatedDuration() {
+            return estimatedDuration;
+        }
+
+        public void setEstimatedDuration(Integer estimatedDuration) {
+            this.estimatedDuration = estimatedDuration;
+        }
+
+        public String getDueDate() {
+            return dueDate;
+        }
+
+        public void setDueDate(String dueDate) {
+            this.dueDate = dueDate;
+        }
+
+        public Long getAssignedStaffId() {
+            return assignedStaffId;
+        }
+
+        public void setAssignedStaffId(Long assignedStaffId) {
+            this.assignedStaffId = assignedStaffId;
+        }
+
+        public String getNotes() {
+            return notes;
+        }
+
+        public void setNotes(String notes) {
+            this.notes = notes;
+        }
+
+        // Legacy getters for backward compatibility
+        public Long getRoomId() {
+            return null; // Not used in new implementation
         }
 
         public String getSpecialInstructions() {
-            return specialInstructions;
-        }
-
-        public void setSpecialInstructions(String specialInstructions) {
-            this.specialInstructions = specialInstructions;
+            return notes;
         }
     }
 
@@ -540,6 +655,68 @@ public class HousekeepingController {
         dto.setAverageRating(staff.getAverageRating() != null ? staff.getAverageRating() : 0.0);
         dto.setTotalTasksCompleted(staff.getTasksCompletedToday() != null ? staff.getTasksCompletedToday() : 0);
         dto.setTenantId(staff.getTenantId());
+        return dto;
+    }
+
+    // Conversion method for User to HousekeepingStaffDTO
+    private HousekeepingStaffDTO convertUserToStaffDTO(User user) {
+        HousekeepingStaffDTO dto = new HousekeepingStaffDTO();
+        dto.setId(user.getId());
+        dto.setEmployeeId("EMP" + user.getId()); // Generate employee ID from user ID
+        dto.setUser(new UserDTO(user.getId(), user.getFirstName(), user.getLastName()));
+        dto.setShiftType("DAY"); // Default shift type since it's not stored in User entity
+        dto.setActive(user.getIsActive() != null ? user.getIsActive() : true);
+        dto.setAverageRating(0.0); // Default rating since not tracked for users
+        dto.setTotalTasksCompleted(0); // Default tasks completed since not tracked for users
+        dto.setTenantId(user.getHotel() != null && user.getHotel().getTenant() != null
+                ? user.getHotel().getTenant().getId()
+                : null);
+        return dto;
+    }
+
+    // Conversion method for HousekeepingTask to DTO
+    private HousekeepingTaskDTO convertToDTO(HousekeepingTask task) {
+        HousekeepingTaskDTO dto = new HousekeepingTaskDTO();
+        dto.setId(task.getId());
+        dto.setTitle(task.getTitle());
+        dto.setRoomNumber(task.getRoomNumber());
+        dto.setTaskType(task.getTaskType());
+        dto.setStatus(task.getStatus());
+        dto.setPriority(task.getPriority());
+        dto.setDescription(task.getDescription());
+        dto.setSpecialInstructions(task.getSpecialInstructions());
+        dto.setCreatedAt(task.getCreatedAt());
+        dto.setAssignedAt(task.getAssignedAt());
+        dto.setStartedAt(task.getStartedAt());
+        dto.setCompletedAt(task.getCompletedAt());
+        dto.setEstimatedDurationMinutes(task.getEstimatedDurationMinutes());
+        dto.setActualDurationMinutes(task.getActualDurationMinutes());
+        dto.setQualityScore(task.getQualityScore());
+        dto.setInspectorNotes(task.getInspectorNotes());
+
+        // Set hotel information
+        if (task.getHotel() != null) {
+            dto.setHotelName(task.getHotel().getName());
+        }
+
+        // Set assigned user information safely
+        if (task.getAssignedUser() != null) {
+            User assignedUser = task.getAssignedUser();
+            dto.setAssignedUserId(assignedUser.getId());
+
+            // Create the assignedUser object for the frontend
+            HousekeepingTaskDTO.AssignedUser dtoUser = new HousekeepingTaskDTO.AssignedUser(
+                    assignedUser.getId(),
+                    assignedUser.getFirstName(),
+                    assignedUser.getLastName(),
+                    assignedUser.getEmail());
+            dto.setAssignedUser(dtoUser);
+        } else {
+            // Set default values for unassigned tasks
+            dto.setAssignedUserId(null);
+            dto.setAssignedUser(null);
+        }
+
         return dto;
     }
 }
